# HexViewer

./: CMakeLists.txt  README.md  build_linux.sh  build_win.bat
.github/workflows/: build.yml
HexViewer/include/: HexData.h  Resource.h  about.h  options.h  render.h  searchdialog.h  update.h
HexViewer/include/system/: update.h
HexViewer/resources/: HexViewer.rc  RCa20404
HexViewer/src/: HexData.cpp  HexViewer.cpp  about.cpp  contextmenu.cpp  options.cpp  render.cpp  searchdialog.cpp  update.cpp
HexViewer/src/system/: update.cpp
HexViewer/src/ui/: about.cpp  notification.cpp
HexViewerExten/: CMakeLists.txt
HexViewerExten/include/: ClassFactory.h  Reg.h  ShellEx.h  pch.h
HexViewerExten/res/: Resource.rc  resource.h
HexViewerExten/src/: ClassFactory.cpp  Reg.cpp  ShellEx.cpp  dllmain.cpp  pch.cpp
docs/: BUILD.md
include/core/: global.h  hexdata.h  imageloader.h  panelcontent.h  panellayout.h  render.h
include/system/: die_database.h  die_downloaddialog.h  language.h  platform_die.h  update.h
include/ui/: contextmenu.h  darkmode.h  menu.h  options.h  pluginmanager.h  processdialog.h  searchdialog.h
resources/ui/: hexviewer.rc
src/: hexviewer.cpp
src/core/: hexdata.cpp  panelcontent.cpp  panellayout.cpp  pluginexecutor.cpp  render.cpp
src/system/: die_database.cpp  die_downloaddialog.cpp  update.cpp
src/ui/: about.cpp  contextmenu.cpp  menu.cpp  options.cpp  pluginmanager.cpp  processdialog.cpp  searchdialog.cpp  selectblockdialog.cpp
